fastrace-macro/tests/ui/err/has-expr-argument.stderr
error: expected identifier
 --> tests/ui/err/has-expr-argument.rs:5:9
  |
5 | #[trace(true)]
  |         ^^^^
